Fix purple box positioning, make overflow text in overlay-content scrollable

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,13 +17,14 @@ body {
   .overlay-content {
     top: 178px;
     height: auto;
+    max-height: 500px;
     width: 48%;
     margin: 0 auto;
     left: 26%;
     position: absolute;
     background-color: white;
     z-index: 1000;
-    overflow: hidden;
+    overflow: scroll;
   }
 
 }
@@ -40,13 +41,14 @@ body {
   .overlay-content {
     top: 178px;
     height: auto;
+    max-height: 500px;
     width: 90%;
     margin: 0 auto;
     left: 5%;
     position: absolute;
     background-color: white;
     z-index: 1000;
-    overflow: hidden;
+    overflow: scroll;
   }
 
 }
@@ -73,7 +75,6 @@ body {
 
 }
 
-
 .overlay {
   top: 0;
   left: 0;
@@ -86,9 +87,10 @@ body {
 
 .overlay-content p {
   padding: 0 25px 15px 25px;
-  text-overflow: clip;
+  text-overflow: scroll;
   line-height: 1.4em;
   font-size: 1.3em;
+  overflow: scroll;
 }
 
 .overlay-animate {
@@ -157,8 +159,8 @@ body {
 }
 
 .box-purple {
-  height: 395px;
-  position: fixed;
+  height: 405px;
+  position: absolute;
   width: 12.5%;
   z-index: 100;
   left: 33.4%;
